# jm_utils

./: README.md  __init__.py  copilot_pyproject_toml  hatchling_pyproject_toml_build  parameters_variables.py  pyproject.toml
core/: __init__.py  jm_logger.py
data/: __init__.py  jm_charts.py  jm_matplotlib.py  jm_numpy.py  jm_plt_pru.py
des/: ax_pie.ipynb  get_fdt.ipynb  plt_colors.ipynb  subplots_jm_pd.ipynb  subplots_pie.ipynb
dev/: ax_pie.ipynb  ax_pie_0.ipynb  brand_cats.json  brand_colors.ipynb  charts_try.py  get_fdt.ipynb  mpl_colors.ipynb  mpl_tints.ipynb  plot_colors.ipynb  plot_palettes.ipynb  plt_colors.ipynb  plt_pareto.ipynb  plt_pie.ipynb  sns_palette.txt  subplots_jm_pd.ipynb
dev/mpl_tints/: brand_colors.json  brand_colors_by_cat_qwen.json  mpl_tints.ipynb  plot_palettes.ipynb  plt_colors.ipynb
dev/output_json/: automotive.json  brands_by_category.json  brands_summary.csv  fashion.json  finance.json  food.json  healthcare.json  media.json  retail.json  tech.json  telecom.json  travel.json  uncategorized.json
jm_utils/: jm_environtment.py  jm_img.py  jm_pmcore.py  jm_richprt.py
jm_utils.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
jm_utils/core/: jm_datetime.py  jm_richprt.py
jm_utils/data/: __init__.py  jm_matplotlib.py  jm_pdaccessor.py  jm_seborn.py  matplotlib_tints.py  mpl_colors.py  mpl_tints.py  pd_functions.py  plt_charts.py  plt_funcs.py  plt_functions.py
test_jm/: info_infoplus_infomax().py  infos.py  jm_plt_pru.py  palette.ipynb  pareto.ipynb  pathlib.ipynb  plt_funcs_test.ipynb  plt_palette.ipynb  plt_pareto.ipynb  prt_state_test.py  richprt_test.py  show_palettes.py  sns_palette.ipynb  test_charts.ipynb  test_datascience.ipynb  test_decorator.ipynb  test_describeplus.ipynb  test_jm_richprt.ipynb  test_utils.ipynb  to_series.ipynb  various_tests.ipynb
