[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "jm_utils"
dynamic = ["version"]
authors = [
    {name = "Jorge Monti", email = "jorgitomonti@gmail.com"}
]
description = "Utilities for pandas, numpy, matplotlib, etc."
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
keywords = ["utils", "utilities", "pandas", "numpy", "datetime", "matplotlib", "data"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
dependencies = [
    "rich>=13.0",           
    "numpy>=1.26.4",    
    "pandas>=2.2.2",     
    "matplotlib>=3.8.4", 
    "seaborn>=0.13.2",   
    "Pillow>=10.3.0",       # for images
]

[tool.setuptools.packages.find]
where = ["."]
include = ["jm_utils*"]

[tool.setuptools_scm]
version_file = "jm_utils/__init__.py"